# IIR_Benchmark

./: .gitignore  .gitmodules  CMakeLists.txt  fetch_deps.cmake  plot_results.py  readme.md
scripts/: generate_test.asv  generate_test.m  sos_coeffs.h
src/: CMakeLists.txt  basic_filter.cpp  basic_filter.h  check.cpp  cmsis_filter.cpp  cmsis_filter.h  cmsis_scalar_filter.cpp  cmsis_scalar_filter.h  filter.h  filter_coeffs.h  ipp_filter.cpp  ipp_filter.h  ipp_test.cpp  kfr_filter.cpp  kfr_filter.h  main.cpp  neon_filter.cpp  neon_filter.h  neon_test.cpp  sos_coeffs.h  steamaudio_filter.cpp  steamaudio_filter.h  vdsp_filter.cpp  vdsp_filter.h
